--- a/pom.xml
+++ b/pom.xml
@@ -25,5 +25,11 @@
         <version>4.11</version>
         <scope>compile</scope>
     </dependency>
+    <dependency>
+        <groupId>com.google.code.gson</groupId>
+        <artifactId>gson</artifactId>
+        <version>2.9.0</version>
+        <scope>compile</scope>
+    </dependency>
 </dependencies>
 </project>
