--- a/pom.xml
+++ b/pom.xml
@@ -31,5 +31,11 @@
         <version>2.9.0</version>
         <scope>compile</scope>
     </dependency>
+    <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-api</artifactId>
+        <version>5.8.2</version>
+        <scope>test</scope>
+    </dependency>
 </dependencies>
 </project>
